--- a/Event.html
+++ b/Event.html
@@ -33,8 +33,9 @@
     alert('i love you miss arezo');
   });
   document.getElementById("but7").addEventListener("click",()=>{
-    alert('i love you mr monu');
+    alert('i love you  monu');
   });
+
 
 </script>
 </html>
