--- a/Event.html
+++ b/Event.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Inline Event </h2>
-    <button  onclick="alert('sapna singh is a good girl')" >greeting</button>
+    <button  onclick="alert('sapna is a good girl')" >greeting</button>
     <button id="but2" ondblclick="alert('she is kajal singh humble girl')">greeting again</button>
     <button id="but3" onmousemove="alert('nikki she is imotional')">greeting again</button>
 
