--- a/Event.html
+++ b/Event.html
@@ -10,7 +10,7 @@
     <h2>Inline Event </h2>
     <button  onclick="alert('sapna is a good girl')" >greeting</button>
     <button id="but2" ondblclick="alert('she is kajal singh humble girl')">greeting again</button>
-    <button id="but3" onmousemove="alert('nikki she is imotional')">greeting again</button>
+    <button id="but3" onmousemove="alert('nikki  is imotional')">greeting again</button>
 
     <h2>Dom Event handler</h2>
     <button id="but4">greeting</button>
