--- a/Event.html
+++ b/Event.html
@@ -17,7 +17,7 @@
     <button id="but5">greeting again</button>
 
     <h2>addEventListener Event handler</h2>
-    <button id="but6">greeting</button>
+    <button id="">greeting</button>
     <button id="but7">greeting again</button>
 </body>
 <script>
