--- a/EventQUE.html
+++ b/EventQUE.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="rectangle"></div>
-    <button id="butt">click me</button>
+    <button id="button">click me</button>
     <script src="script.js"></script>
 </body>
 </html>
